--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,6 +1,21 @@
-- name: Publish a Python distribution to PyPI
-  uses: pypa/gh-action-pypi-publish@v1.6.4
-  with:
-    password: ${{ secrets.PYPI_API_TOKEN }}
-    verbose: true
-    print_hash: true
+name: Publish Distribution to PyPI
+
+on:
+  release:
+    types: [published]
+
+jobs:
+  PyPI:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - run: python3 -m pip install --upgrade build && python3 -m build
+      - name: Publish
+        uses: pypa/gh-action-pypi-publish@v1.6.4
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          verbose: true
+          print_hash: true
