--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -8,13 +8,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  PyPI:
+  Build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: python3 -m pip install --upgrade build && python3 -m build
       - run: pip install .
-    
