--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -15,4 +15,5 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - run: apt purge python3-setuptools
       - run: python3 -m pip install .
