--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -15,5 +15,4 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: sudo apt purge python3-setuptools
-      - run: python3 -m pip install .
+      - run: python3 -m venv .venv && source .venv/bin/activate && CFLAGS="-O3 -fopenmp" pip install .
