--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ classifiers = [
 ]
 requires-python = ">=3"
 dependencies = [
+    "metawear;platform_system=='Linux'",
     "toml",
     "coloredlogs",
-    "metawear",
     "numpy",
     "pandas",
     "pyarrow",
