change metaware to optional dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 ]
 requires-python = ">=3"
 dependencies = [
-    "metawear;platform_system=='Linux'",
+    "metawear;platform_system!='Darwin'",
     "toml",
     "coloredlogs",
     "numpy",
