--- a/docs/package.json
+++ b/docs/package.json
@@ -1,14 +1,23 @@
 {
-	"dependencies": {
-		"next": "^13.2.3",
-		"nextra": "^2.2.17",
-		"nextra-theme-docs": "^2.2.17",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@types/node": "18.14.6",
-		"@types/react": "^18.0.28",
-		"typescript": "4.9.5"
-	}
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "prettier": {
+    "semi": true,
+    "singleQuote": false
+  },
+  "dependencies": {
+    "next": "^13.2.3",
+    "nextra": "^2.2.17",
+    "nextra-theme-docs": "^2.2.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.14.6",
+    "@types/react": "^18.0.28",
+    "typescript": "4.9.5"
+  }
 }
