--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,19 +15,19 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3 :: Only",
 ]
-requires-python = ">=3"
 dependencies = [
     "click>=8.1.3",
     "click-option-group>=0.5.5",
-    "metawear>=1.0.8; platform_system!='Darwin' and platform_system!='Windows'",
-    "rich>=13.3.1",
-    "tqdm>=4.65.0",
+    "metawear>=1.0.8; platform_system=='Linux'",
+    "rich>=13.3.5",
+    "tqdm>=4.64.1",
     "toml>=0.10.2",
     "numpy>=1.24.2",
     "pandas>=1.5.3",
-    "pyarrow>=11.0.0",
-    "boto3>=1.26.78",
+    "pyarrow>=12.0.0",
+    "boto3>=1.26.79",
 ]
+requires-python = ">=3"
 
 [project.urls]
 Documentation = "https://metaprocessor.org"
@@ -39,18 +39,35 @@ metaprocessor = "metaprocessor.cli:cli"
 mp = "metaprocessor.cli:cli"
 
 [tool.ruff]
-ignore = [
-    "E501", # line too long, handled by black
-    "B008", # do not perform function calls in argument defaults
-    "C901", # too complex
-]
 select = [
-    "E", # pycodestyle errors
-    "W", # pycodestyle warnings
-    "F", # pyflakes
-    "I", # isort
-    "C", # flake8-comprehensions
-    "B", # flake8-bugbear
+  "E",   # pycodestyle error
+  "F",   # Pyflakes
+  "I",   # isort
+  "W",   # pycodestyle warning
+  "UP",  # pyupgrade
+  "S",   # flake8-bandit
+  "B",   # flake8-bugbear
+  "ANN", # flake8-annotations
+]
+ignore = [
+  "E501",   # Line too long
+  "S101",   # Use of `assert` detected"
+  "S113",   # Probable use of requests call without timeout
+  "B008",   # Do not perform function call in argument defaults
+  "ANN001", # Missing type annotation for function argument
+  "ANN002", # Missing type annotation for `*args`
+  "ANN003", # Missing type annotation for `**kwargs`
+  "ANN101", # Missing type annotation for self in method
+  "ANN102", # Missing type annotation for cls in classmethod
+  "ANN401", # Dynamically typed expressions are disallowed
+]
+
+[tool.ruff.per-file-ignores]
+"metaprocessor/helpers/boto3.py" = [
+  "S324", # Probable use of insecure hash functions in `hashlib`: `md5`
+]
+"metaprocessor/helpers/config.py" = [
+  "S605", # Starting a process with a shell, possible injection detected
 ]
 
 [tool.ruff.isort]
