--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "singleQuote": false
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "next": "^13.4.12",
     "nextra": "^2.10.0",
     "nextra-theme-docs": "^2.10.0",
