--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "singleQuote": false
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.30.0",
     "@vercel/analytics": "^1.0.1",
     "next": "^13.4.12",
     "nextra": "^2.10.0",
@@ -17,7 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.4.7",
+    "@types/node": "20.4.8",
     "@types/react": "^18.2.18",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
